--- a/css/blocks/tags.css
+++ b/css/blocks/tags.css
@@ -3,13 +3,14 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
+  gap: 5px 5px;
 }
 
-.tags__item {
+/* .tags__item {
   margin-right: 5px;
   margin-bottom: 5px;
 }
 
 .tags__item:last-child {
   margin-right: 0;
-}
+} */
